chore: sync external skills 2026-07-10